--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,10 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Setup mruby'
+description: 'Compile mruby from source code and add it to the PATH'
+author: 'Aotokitsuruya'
 inputs:
-  milliseconds: # change this
-    required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+  mruby-version:
+    description: 'the target mruby version to install'
+    default: '3.2.0'
 runs:
   using: 'node16'
   main: 'dist/index.js'
