--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@actions/cache": "^3.2.1",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@actions/io": "^1.1.3",
-    "@actions/tool-cache": "^2.0.1"
+    "@actions/io": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
