chore: set package author to Aotokitsuruya
Add the project author information and rebuild dist artifacts.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mruby",
     "setup"
   ],
-  "author": "",
+  "author": "Aotokitsuruya",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^2.0.3",
